force-app/src/objects/c2g__codaBankStatementLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankstatement</customHelpPage>
    <description>Stores the line item details of an imported bank statement.</description>
    <fields>
        <fullName>CTCM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Statement Line Items</relationshipLabel>
        <relationshipName>Bank_Statement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Bank_Charges__c</fullName>
        <label>Bank Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTCM__Calc_AccountName__c</fullName>
        <formula>IF(FIND(
		&quot;/IBAN/&quot;, 
		c2g__Description__c
        )&gt; 0, 
MID(
	c2g__Description__c, 
	FIND(
		&quot;/NAME/&quot;, 
		c2g__Description__c
        )+6, 
	FIND(
		&quot;/&quot;, 
		c2g__Description__c,
		FIND(
			&quot;/NAME/&quot;, 
			c2g__Description__c
		)+6
	)- (FIND(
		&quot;/NAME/&quot;, 
		c2g__Description__c
        )+6)
),
 TRIM(MID(c2g__Description__c,105,26))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account name as detected in the bankstatement</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Calc_SIN_Number__c</fullName>
        <formula>IF(FIND(
		&quot;SIN&quot;, 
		c2g__Description__c
        )&gt; 0,
MID(c2g__Description__c, FIND(&quot;SIN&quot;, c2g__Description__c),9),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Detected Sales Invoice Number from bank statement line.</inlineHelpText>
        <label>SIN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Cash_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Bank Statement Line Items</relationshipLabel>
        <relationshipName>Bank_Statement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__Cash_Match_Process__c</fullName>
        <formula>NOT(OR(ISBLANK(CTCM__Matched_Account__c),c2g__Amount__c &lt; 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Match Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Cash_Match_Status__c</fullName>
        <label>Cash Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Posting in Progress</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCM__End_To_End_ID__c</fullName>
        <label>End To End ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Statement Line Items (Matched Account)</relationshipLabel>
        <relationshipName>Bank_Statement_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__Matched_Reference__c</fullName>
        <label>Matched Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__OverrideValidations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Override the validations on CTCM__Cash_Match_Status__c and CTCM__Cash_Entry__c fields.</inlineHelpText>
        <label>Override Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Process__c</fullName>
        <formula>if (TEXT(CTCM__Cash_Match_Status__c) == &apos;Closed&apos; ||( CTCM__StornoCode__c== null &amp;&amp; (ISBLANK ( CTCM__Matched_Account__c) || c2g__Amount__c &lt;0)) , false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__StatementLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StatementLine</label>
        <referenceTo>CTCM__StatementLine__c</referenceTo>
        <relationshipLabel>Bank Statement Line Items</relationshipLabel>
        <relationshipName>Bank_Statement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__StornoCode__c</fullName>
        <inlineHelpText>Storno Code as provided by the bank.</inlineHelpText>
        <label>StornoCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__bankAccountID__c</fullName>
        <formula>c2g__BankStatement__r.c2g__BankAccount__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>bankAccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__calc_IBAN__c</fullName>
        <formula>IF(FIND(
		&quot;/IBAN/&quot;, 
		c2g__Description__c
        )&gt; 0,  
MID(
	c2g__Description__c, 
	FIND(
		&quot;/IBAN/&quot;, 
		c2g__Description__c
        )+6, 
	FIND(
		&quot;/&quot;, 
		c2g__Description__c,
		FIND(
			&quot;/IBAN/&quot;, 
			c2g__Description__c
		)+6
	)- (FIND(
		&quot;/IBAN/&quot;, 
		c2g__Description__c
        )+6)
)
,
MID(c2g__Description__c,40,FIND(&quot; &quot;, c2g__Description__c,41)-40)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Detected IBAN number form bank statement line</inlineHelpText>
        <label>IBAN (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__calc_REFERENCE__c</fullName>
        <formula>IF(FIND(
		&quot;/IBAN/&quot;, 
		c2g__Description__c
        )&gt; 0,  
MID(
	c2g__Description__c, 
	FIND(
		&quot;/REMI/&quot;, 
		c2g__Description__c
        )+6, 
	FIND(
		&quot;/&quot;, 
		c2g__Description__c,
		FIND(
			&quot;/REMI/&quot;, 
			c2g__Description__c
		)+6
	)- (FIND(
		&quot;/REMI/&quot;, 
		c2g__Description__c
        )+6)
)
,
MID(c2g__Description__c,131,LEN(c2g__Description__c)-131)
)</formula>
        <label>calc REFERENCE (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__calc_REFERENCE_line1__c</fullName>
        <formula>LEFT(CTCM__calc_REFERENCE__c, 32)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>calc REFERENCE line1 (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__calc_REFERENCE_line2__c</fullName>
        <formula>MID( CTCM__calc_REFERENCE__c,33,32)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>calc REFERENCE line2 (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__calc_REFERENCE_line3__c</fullName>
        <formula>MID( CTCM__calc_REFERENCE__c,65,32)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>calc REFERENCE line3 (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankStatement__c</fullName>
        <label>Bank Statement</label>
        <referenceTo>c2g__codaBankStatement__c</referenceTo>
        <relationshipLabel>Bank Statement Line Items</relationshipLabel>
        <relationshipName>BankStatementLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ExternalSourceTransactionId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The unique identifier for an imported transaction.</description>
        <externalId>true</externalId>
        <label>External Source Transaction ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ExternalSource__c</fullName>
        <description>Name of the external system used to import the transaction.</description>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineStatus__c</fullName>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                    <default>true</default>
                    <label>Imported</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Bank Statement Line Items</relationshipLabel>
        <relationshipName>BankStatementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionExternalId__c</fullName>
        <description>This field has been deprecated.</description>
        <externalId>true</externalId>
        <label>Deprecated:Transaction External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the transaction created for the bank statement line during the reconciliation process.</description>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Bank Statement Line Items</relationshipLabel>
        <relationshipName>BankStatementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Statement Line Item</label>
    <nameField>
        <displayFormat>BSL{0000}</displayFormat>
        <label>Bank Statement Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>